[package]
name = "virtual-lcd-core"
version = "0.1.5"

edition = "2024"
rust-version = "1.85"
description = "Virtual LCD firmware core library for Rust projects."
license = "MIT"
repository = "https://github.com/fhfelipefh/Virtual-LCD-Firmware-Simulator"
homepage = "https://github.com/fhfelipefh/Virtual-LCD-Firmware-Simulator"
documentation = "https://docs.rs/virtual-lcd-core"
readme = "README.md"
keywords = ["lcd", "embedded", "display", "framebuffer", "simulator"]

[dependencies]
virtual-lcd-sdk = { version = "0.1.5", path = "../virtual-lcd-sdk" }
