[package]
name = "virtual-lcd-examples"
version = "0.1.3"
edition = "2024"
default-run = "dashboard"

[dependencies]
virtual-lcd-core = { version = "0.1.3", path = "../virtual-lcd-core" }
virtual-lcd-sdk = { version = "0.1.3", path = "../virtual-lcd-sdk" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
virtual-lcd-renderer = { version = "0.1.3", path = "../virtual-lcd-renderer" }
