[package]
name = "virtual-lcd-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "WebAssembly viewer for Virtual LCD Firmware Simulator"
license = "MIT"
repository = "https://github.com/fhfelipefh/Virtual-LCD-Firmware-Simulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
virtual-lcd-core = { version = "0.1.5", path = "../virtual-lcd-core" }
virtual-lcd-sdk = { version = "0.1.5", path = "../virtual-lcd-sdk" }
virtual-lcd-examples = { version = "0.1.5", path = "../virtual-lcd-examples" }
